# FGVC-RA-CNN

./: .gitignore  README.md  design_note_racnn.ipynb  download_dataset.ipynb  generate_presentation_heatmaps.py  hyper-parameters.yaml  main.py  pyproject.toml  simple_tester.py  temp.ipynb  train.sh  trainer.py
data/: CUB_loader.py
results/Iron-Scraps/: test_custom_metrics_report.txt  test_metrics_report.txt  val_metrics_report.txt
trainer_pipeline/: data_loaders.py  gradcam.py  metrics.py  racnn_stage1.py  racnn_stage2.py  racnn_stage3.py  racnn_stage4.py  racnn_stage5.py  racnn_stage6_final.py
trainer_pipeline/model_base_architectures/: apn.py  ra_cnn.py  vanilla_cnn.py
