[project]
name = "eye-openning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "termcolor>=3.3.0",
    "timm>=1.0.27",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchmetrics>=1.9.0",
    "torchvision>=0.20.1",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "data", ".venv"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = "none"

[tool.basedpyright]
exclude = ["**/node_modules", "**/__pycache__", "data", ".venv"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.basedpyright.analysis.diagnosticSeverityOverrides]
reportMissingTypeStubs = "none"
